[build-system]
requires = ["setuptools"]

[project]
name = "splfxseq"
version = "0.0"
dependencies = [
  "numpy",
  "scipy",
  "pysam",
]

[project.scripts]
'check_overlap_rnabc_knownbc' = 'pairing.check_overlap_rnabc_knownbc:main'
'annot_pairingtbl_genomic' = 'pairing.annot_pairingtbl_genomic:main'
'mut_coverage_single_target' = 'pairing.mut_coverage_single_target:main'
'index_tagsorted_bam' = 'spliceprocess.index_tagsorted_bam:main'
'bc_tag_paired_fq' = 'spliceprocess.bc_tag_paired_fq:main'
'kmer_match' = 'spliceprocess.kmer_match:main'
'annot_bam_plasbc_and_umi' = 'spliceprocess.annot_bam_plasbc_and_umi:main'
