[build-system]
requires = ["setuptools"]

[project]
name = "splfxseq"
version = "0.0"
dependencies = [
  "numpy",
  "scipy",
  "pysam",
]

[project.scripts]
'check_overlap_rnabc_knownbc' = 'pairing.check_overlap_rnabc_knownbc:main'
'annot_pairingtbl_genomic' = 'pairing.annot_pairingtbl_genomic:main'
'mut_coverage_single_target' = 'pairing.mut_coverage_single_target:main'
'index_tagsorted_bam' = 'spliceprocess.index_tagsorted_bam:main'
'bc_tag_paired_fq' = 'spliceprocess.bc_tag_paired_fq:main'
'kmer_match' = 'spliceprocess.kmer_match:main'
'process_rna_aligns' = 'spliceprocess.process_rna_aligns:main'
'combine_rna_counts' = 'spliceprocess.combine_rna_counts:main'
'rna_counts_add_var_info' = 'spliceprocess.rna_counts_add_var_info:main'
'annot_bam_plasbc_and_umi' = 'spliceprocess.annot_bam_plasbc_and_umi:main'
'plot_sample_x_isogrp' = 'spliceprocess.plot_sample_x_isogrp:main'
'map_final_plasmid_exons' = 'refsetup.map_final_plasmid_exons:main'
'varfx_singlesamp' = 'vareffects.varfx_singlesamp:main'
